--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# docker-compose.yml
 version: "3.9"
 
 services:
@@ -7,28 +6,34 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8070:8000"
-    environment:
-      - DB_HOST=db
-      - DB_NAME=news_db
-      - DB_USER=user
-      - DB_PASSWORD=password
-      - DB_PORT=5432
+      - "8070:8070"
     depends_on:
-      - db
+      - database
     volumes:
       - .:/app  # Optional, for development
 
-  db:
-    image: postgres:16
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=listen_audio_db
+  database:
+    image: postgres:latest
+    container_name: c54-db
+    restart: always
     ports:
-      - "5436:5436"  # Optional, for local access
+      - "5431:5432"
+    env_file:
+      - .env
+    environment:
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./init_db.sql:/docker-entrypoint-initdb.d/01-init-db.sql
+      - ./data.sql:/docker-entrypoint-initdb.d/02-init-data.sql
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
+      interval: 20s
+      timeout: 10s
+      retries: 5
+      start_period: 20s
 
 volumes:
   postgres_data:
