added live section

--- a/.env
+++ b/.env
@@ -5,6 +5,13 @@ DB_HOST=database
 DB_PORT=5432
 
 
+# DB_USER=postgres
+# DB_PASSWORD=password
+# DB_NAME=listen_audio_db
+# DB_HOST=localhost
+# DB_PORT=5431
+
+
 cloud_name=dhnqdr351
 api_key=578566682639469
 api_secret=RPrZXk7VZF7IwG0YkBe1Ox0xF6U
