--- a/.env
+++ b/.env
@@ -8,8 +8,8 @@
 DB_USER=postgres
 DB_PASSWORD=password
 DB_NAME=listen_audio_db
-DB_HOST=database
-DB_PORT=5432
+DB_HOST=localhost
+DB_PORT=5431
 
 
 cloud_name=dhnqdr351
